# dashfrog

./: .gitignore  DEPLOYMENT.md  LICENSE  README.md  collector-config.yaml  const.py  dashfrog.py  decorators.py  docker-compose.yml  package-lock.json  process.py  prometheus.yaml  pyproject.toml
backend/: .dockerignore  Dockerfile  alembic.ini  config.yaml  main.py  pyproject.toml
backend/.devcontainer/: Dockerfile  devcontainer.json
backend/alembic/: env.py
backend/alembic/versions/: b209f644d09d_update_notebook.py  bf277d8d0950_initial_tables.py
backend/catalogs/: api.yaml  tasks.yaml
backend/http_requests/: flows.http  labels.http
backend/migrations/: init_db.up.sql
backend/src/: _inits.py  app.py  backend.py  context.py  core.py
backend/src/adapters/: stores.py
backend/src/adapters/stores/: __init__.py  events.py  labels.py  notes.py  workflows.py
backend/src/adapters/stores/models/: events.py  labels.py  notes.py
backend/src/api/: __init__.py  payloads.py
backend/src/api/paginate/: bases.py  typing.py
backend/src/api/routes/: __init__.py  events.py  flows.py  health.py  ingest.py  labels.py  metrics.py  notes.py  steps.py
backend/src/core/: __init__.py  config.py  context.py  stores.py  stringcase.py
backend/src/domain/: entities.py  usecases.py
backend/src/domain/entities/: __init__.py  events.py  flows.py  labels.py  metrics.py  notes.py  stores.py
backend/src/domain/usecases/: __init__.py  events.py  labels.py  metrics.py  notes.py  workflows.py
backend/src/events/: __init__.py  entities.py  event.py  model.py
backend/src/facets/: __init__.py  entities.py  facets.py  model.py
backend/src/models/: __init__.py  event.py  facets.py  helpers.py  notebook.py  workflows.py
backend/src/notebooks/: __init__.py  entities.py  exceptions.py  model.py  notebook.py
backend/src/routes/: __init__.py  events.py  flows.py  health.py  labels.py  metrics.py  notebook.py
backend/src/workflows/: __init__.py  entities.py  exceptions.py  workflow.py
backend/tests/core/: test_stringcase.py
collector/: .gitignore  Dockerfile  builder-config.yaml
dashfrog/: .dockerignore  .env.example  Dockerfile  dashfrog.yaml  docker-compose.dev.yml  docker-compose.production.yml  docker-compose.test.yml  docker-compose.yml  pyproject.toml
dashfrog/.claude/: settings.local.json
dashfrog/.devcontainer/: Dockerfile  README.md  devcontainer.json  docker-compose.yml  otel-collector-config.yml  prometheus.yml
dashfrog/demo-app/: __init__.py  async_flow.py  demo.py  metrics.py  sync_flow.py
dashfrog/deploy/docker/: otel-collector-config.yml  prometheus.yml
dashfrog/deploy/helm/dashfrog/: Chart.yaml  README.md  values.yaml
dashfrog/deploy/helm/dashfrog/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  otel-collector-configmap.yaml  otel-collector-deployment.yaml  otel-collector-service.yaml  secret.yaml  service.yaml  serviceaccount.yaml
dashfrog/scripts/: README.md  populate_flows.py  populate_prometheus.py
dashfrog/src/dashfrog/: __init__.py  alembic.ini  cli.py  config.py  dashfrog.py  flow.py  metrics.py  migrations.py  models.py  step.py  utils.py
dashfrog/src/dashfrog/alembic/: env.py
dashfrog/src/dashfrog/alembic/versions/: 03da39980edf_notebook_extra_cols.py  874ee482e31f_init_models.py  9c7749d989a7_notebook_cols.py
dashfrog/src/dashfrog/api/: AUTH_README.md  __init__.py  auth.py  auth_router.py  comment.py  flow.py  metrics.py  notebook.py  schemas.py
dashfrog/src/dashfrog/api/static/: index.html
dashfrog/src/dashfrog/api/static/assets/: index--t_j4mBk.js  index-BJ2dj9hy.css  index-BNdZECzp.css  index-BQyy4xZc.js  index-BlFfs7vo.js  index-BsO8MvyO.js  index-By0xYddw.js  index-C66BOw1k.css  index-C77Elh4e.js  index-C8Mc4KrH.js  index-CMvZkOeU.css  index-CSAPXuQt.js  index-CSHIcrQS.css  index-CuhZZ-Nz.js  index-DOOJ5TeS.js  index-Drm6YCXq.js  index-zfOez08x.css  module-RjUF93sV.js
dashfrog/tests/: README.md  conftest.py  test_flow.py  test_flow_async.py  test_metrics.py  test_registration.py  test_statistics.py  utils.py
dashfrog/tests/api/: test_metrics.py  test_notebook.py  test_timeline.py
dashfrog_kube/: Chart.yaml  README.md  values-production.yaml  values.yaml
dashfrog_python_sdk/: README.md  __init__.py  core.py  dashfrog.py  dashfrog.yaml  entities.py  flows.py  metrics.py  otel_dashfrog.py  otel_flows.py  pyproject.toml  stores.py  time.py
dashfrog_python_sdk/.claude/: settings.local.json
dashfrog_python_sdk/.devcontainer/: Dockerfile  README.md  devcontainer.json  docker-compose.yml
dashfrog_python_sdk/demo/: api.py  cronjobs.py  db.py  flasky.py
dashfrog_python_sdk/demo/app_fastery/: api.py  worker.py
dashfrog_python_sdk/demo/tasker/: README.md  api.py  models.py  schemas.py  worker.py
dashfrog_python_sdk/http_requests/: demo_fastapi.http  demo_tasker.http
dashfrog_python_sdk/src/dashfrog_python_sdk/: __init__.py  alembic.ini  config.py  constants.py  dashfrog.py  event.py  flow.py  metric.py  metrics.py  migrations.py  models.py  statistics.py  step.py  timeline.py  utils.py
dashfrog_python_sdk/src/dashfrog_python_sdk/alembic/: env.py
dashfrog_python_sdk/src/dashfrog_python_sdk/alembic/versions/: 001_initial_schema.py  002_add_metadata_table.py  497b78ceea83_init_models.py  9c7749d989a7_notebook_cols.py  b1446e5041c9_comment_col.py
dashfrog_python_sdk/src/dashfrog_python_sdk/api/: AUTH_README.md  __init__.py  auth.py  comment.py  flow.py  metric.py  metrics.py  notebook.py  schemas.py  statistics.py  timeline.py
dashfrog_python_sdk/tests/: conftest.py  test_api.py  test_cache.py  test_entities.py  test_flow.py  test_flow_async.py  test_metric.py  test_registration.py  test_statistics.py  test_timeline.py  test_views.py  utils.py
dashfrog_python_sdk/tests/api/: test_flow.py  test_statistics.py
demo/: api.py  cronjobs.py  flasky.py
docs/: configuration.md  deployment.md  flows.md  metrics.md  notebooks.md
frontend/: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  biome.json  components.json  docker-entrypoint.sh  index.html  nginx.conf  package-lock.json  (+4 more)
(+238 files in other folders)
