[project]
name = "dashfrog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "opentelemetry-api>=1.37.0",
    "opentelemetry-exporter-otlp>=1.37.0",
    "opentelemetry-sdk>=1.37.0",
]

[dependency-groups]
dev = [
    "opentelemetry-exporter-jaeger>=1.11.1",
]
fastapi = [
    "fastapi>=0.118.0",
    "opentelemetry-instrumentation-fastapi>=0.58b0",
]
flask = [
    "flask>=3.1.2",
    "opentelemetry-instrumentation-flask>=0.58b0",
]
