[project]
name = "dashfrog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "opentelemetry-api>=1.37.0",
    "opentelemetry-exporter-otlp>=1.37.0",
    "opentelemetry-sdk>=1.37.0",
    "pydantic>=2.11.9",
]

[dependency-groups]
dev = [
    "bandit>=1.8.6",
    "opentelemetry-exporter-jaeger>=1.11.1",
    "pyright>=1.1.405",
    "pytest>=8.4.2",
    "ruff>=0.13.2",
]
fastapi = [
    "fastapi>=0.118.0",
    "opentelemetry-instrumentation-fastapi>=0.58b0",
]
flask = [
    "flask>=3.1.2",
    "opentelemetry-instrumentation-flask>=0.58b0",
]
