[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "axiom-py>=0.9.1",
    "clickhouse-connect>=0.9.2",
    "fastapi>=0.118.0",
    "orjson>=3.11.3",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.11.0",
    "structlog>=25.4.0",
    "uvicorn>=0.37.0",
]

[dependency-groups]
dev = [
    "bandit>=1.8.6",
    "pyright>=1.1.405",
    "pytest>=8.4.2",
    "ruff>=0.13.2",
]

[tool.ruff]
line-length = 120
target-version = "py312"
exclude = [
    ".bzr",
    ".git",
    ".svn",
    ".hg",
    "typings",
    "src/test",
    "src/tests",
    "src/alembic"
]

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort.sections]
opentel = ["opentelemetry*"]
tests=["pytest", "test*"]

[tool.ruff.lint.isort]
combine-as-imports = true
force-wrap-aliases = true
force-sort-within-sections = true
forced-separate = ["tests", "opentelemetry"]
known-local-folder = ["tests"]
section-order = [
  "future",
  "standard-library",
  "third-party",
  "opentel",
  "first-party",
  "local-folder",
  "tests",
]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101", # asserts allowed in tests
]

[tool.ruff.lint.pycodestyle]
max-line-length = 120

[tool.pyright]
include = ["**"]
exclude = ["tests/**"]
pythonVersion = "3.12"
stubPath = "typings"
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md#diagnostic-rule-defaults
deprecateTypingAliases = true
typeCheckingMode = "standard"

[tool.bandit]
exclude_dirs =  ["tests", ".venv"]
skips = ["B101"]


[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"
