[project]
name = "dashfrog-python-sdk"
version = "0.1.0"
description = "Business Observability on OpenTelemetry"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Core OpenTelemetry
    "opentelemetry-api>=1.37.0,<2.0.0",
    "opentelemetry-sdk>=1.37.0,<2.0.0",
    "opentelemetry-exporter-otlp>=1.37.0,<2.0.0",
    # Database
    "sqlalchemy>=2.0.0,<3.0.0",
    "psycopg2-binary>=2.9.0",
    "alembic>=1.13.0,<2.0.0",
    # Configuration
    "pydantic>=2.0.0,<3.0.0",
]

[project.optional-dependencies]
# API server dependencies
api = [
    "fastapi>=0.118.0",
    "uvicorn>=0.30.0",
]

# Instrumentation packages (optional, imported on-demand)
instrumentation = [
    "opentelemetry-instrumentation-aws-lambda>=0.58b0",
    "opentelemetry-instrumentation-botocore>=0.58b0",
    "opentelemetry-instrumentation-celery>=0.58b0",
    "opentelemetry-instrumentation-fastapi>=0.58b0",
    "opentelemetry-instrumentation-flask>=0.58b0",
    "opentelemetry-instrumentation-httpx>=0.58b0",
    "opentelemetry-instrumentation-requests>=0.58b0",
]

# Development tools
dev = [
    "pytest>=8.4.2",
    "pyright>=1.1.405",
    "ruff>=0.13.2",
]

# Testing dependencies (includes instrumentation for tests)
test = [
    "pytest>=8.4.2",
    "fastapi>=0.118.0",
    "httpx>=0.28.0",
    "opentelemetry-instrumentation-fastapi>=0.58b0",
]

[tool.ruff]
line-length = 120
target-version = "py312"
exclude = [
    ".bzr",
    ".git",
    ".svn",
    ".hg",
    "typings",
    "src/test",
    "src/tests",
    "src/alembic",
    "examples",
]

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort.sections]
opentel = ["opentelemetry*"]
tests=["pytest", "test*"]

[tool.ruff.lint.isort]
combine-as-imports = true
force-wrap-aliases = true
force-sort-within-sections = true
forced-separate = ["tests", "opentelemetry"]
known-local-folder = ["tests"]
known-first-party=["dashfrog_python_sdk*"]
section-order = [
  "future",
  "standard-library",
  "third-party",
  "opentel",
  "first-party",
  "local-folder",
  "tests",
]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101", # asserts allowed in tests
]

[tool.ruff.lint.pycodestyle]
max-line-length = 120

[tool.pyright]
include = ["src/**"]
exclude = ["tests/**", ".venv/**", "examples/**"]
pythonVersion = "3.10"
stubPath = "typings"
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md#diagnostic-rule-defaults
deprecateTypingAliases = true
typeCheckingMode = "standard"

[tool.bandit]
exclude_dirs =  ["tests", ".venv", "examples"]
skips = ["B101"]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
package = true

[tool.setuptools]
packages = ["dashfrog_python_sdk"]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
dashfrog_python_sdk = ["py.typed"]
